refactor: centralize http usage via HoloHttp